# cup-warmer

./: .gitignore  CMakeLists.txt  fix_lovyan.ps1  partitions.csv  sdkconfig.defaults
components/http_server/: CMakeLists.txt  http_server.c
components/http_server/include/: http_server.h
components/lcd_display/: CMakeLists.txt  idf_component.yml  lcd_display.cpp
components/lcd_display/include/: lcd_display.h
components/scheduler/: CMakeLists.txt  scheduler.c
components/scheduler/include/: scheduler.h
components/soft_rtc/: CMakeLists.txt  soft_rtc.c
components/soft_rtc/include/: soft_rtc.h
components/temp_control/: CMakeLists.txt  pid.c  temp_control.c
components/temp_control/include/: pid.h  temp_control.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/include/: app_common.h
